# cpp-project-template

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
project/: CMakeLists.txt
project/include/: bar.hpp
project/src/: bar.cpp  main.cpp  project.ixx
project/src/baz/: baz.ixx  fizz.ixx  fizz_impl.ixx
project/src/foo/: bar.ixx  bar_impl.ixx  foo.ixx
tests/: CMakeLists.txt  test.cpp  test_bar.cpp  test_fizz.cpp
